<resources>
    <string name="app_name">Notes</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_a_member">Not a member?</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="username">userName</string>
    <string name="password">password</string>
    <string name="repeated_password">repeated password</string>
    <string name="add_note">Add note</string>
    <string name="update_note">Update note</string>
</resources>